# amp

gtk/: Makefile.am  Makefile.in  amp-about.cc  amp-about.h  amp-button.cc  amp-button.h  amp-chooser.cc  amp-chooser.h  amp-gui-manager.cc  amp-gui-manager.h  amp-library-manager.cc  amp-library-manager.h  amp-player.cc  amp-player.h  amp-statusbar.cc  amp-statusbar.h  amp-toolbar.cc  amp-toolbar.h  amp-viewer.cc  amp-viewer.h  amp-welcome.cc  amp-welcome.h  main.cc
