## Process this file with automake to produce Makefile.in

## Created by Anjuta



AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\" \
	$(AMP_CFLAGS)

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = amp

amp_SOURCES = \
	main.cc \
	amp-gui-manager.cc \
	amp-gui-manager.h \
	amp-viewer.cc \
	amp-viewer.h \
	amp-button.cc \
	amp-button.h \
	amp-toolbar.cc \
	amp-toolbar.h \
	amp-about.cc \
	amp-about.h \
	amp-library-manager.cc \
	amp-library-manager.h \
	amp-player.cc \
	amp-player.h \
	amp-statusbar.cc \
	amp-statusbar.h \
	amp-welcome.cc \
	amp-welcome.h \
	amp-chooser.cc \
	amp-chooser.h

amp_LDFLAGS = 

amp_LDADD = $(AMP_LIBS)


